Joe - adds playlist functionality and wip tests

--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,11 @@
 .page-container {
-    position: relative;
-    min-height: 100vh;
+    min-height: 100%;
+    height: auto !important;
+    height: 100%;
+    margin: 0 auto -142px;
 }
 
-.content-wrap {
-    padding-bottom: 2.5rem; /* Footer height */
+.footer,
+.push {
+    height: 142px; /* .push must be the same height as .footer */
 }
